--- a/gastronomie/gastronomie.html
+++ b/gastronomie/gastronomie.html
@@ -1,189 +1,247 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/gastronomie/gastronomie.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/gastronomie/gastronomie.css" />
     <title>gastronomie</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="test"></div>
-        <nav>
-            <ul>
-                <li><a href="/index.html" class="default">🏠</a></li>
-                <li><a href="/gastronomie/gastronomie.html">Gastronomie</a></li>
-                <li><a href="loisirs.html">Loisirs</a></li>
-                <li><a href="/cultures.html">Cultures</a></li>
-                <li><a href="/news.html">News</a></li>
-            </ul>
-            <div class="search-container">
-                <input type="search" class="search-bar" placeholder="Rechercher..." />
-                <span class="search-icon" onclick="toggleSearchBar()">&#128269;</span>
-            </div>
-        </nav>
+      <div class="test"></div>
+      <nav>
+        <ul>
+          <li><a href="/index.html" class="default">🏠</a></li>
+          <li><a href="/gastronomie/gastronomie.html">Gastronomie</a></li>
+          <li><a href="../loisir.html">Loisirs</a></li>
+          <li><a href="/cultures.html">Cultures</a></li>
+          <li><a href="/news.html">News</a></li>
+        </ul>
+        <div class="search-container">
+          <input type="search" class="search-bar" placeholder="Rechercher..." />
+          <span class="search-icon" onclick="toggleSearchBar()">&#128269;</span>
+        </div>
+      </nav>
     </header>
     <main>
-        <h1>Gastronomie</h1>
-        <h2>Restaurants:</h2>
-        <section class="restaurants">
-            <div class="div7">
-                <article class="mise_en_avant">
-                    <img class="img_restaurant" src="/assets/La_voliere_gourmande.png" alt="la La_voliere_gourmande">
-                    <div class="div8">
-                        <h3>La Volière Gourmande</h3>
-                        <p>Un lieu où chaque plat est une envolée de saveurs, inspirée par nos amis à plumes.</p>
-                        <p> Spécialité:</p>
-                        <p>Poulet Rôti à l’ herbe de Provence:</p>
-                        <p>Un poulet parfaitement rôti, tendre et parfumé, accompagné d'un mélange d'herbes fraîches et
-                            d'une sauce maison.Un lieu où chaque plat est une envolée de
-                            saveurs, inspirée par nos amis à plumes.</p>
-                        <a href="./la voliere gourmande.html">
-                            <button>En savoir plus</button>
-                        </a>
-                    </div>
-                </article>
+      <h1>Gastronomie</h1>
+      <h2>Restaurants:</h2>
+      <section class="restaurants">
+        <div class="div7">
+          <article class="mise_en_avant">
+            <img
+              class="img_restaurant"
+              src="/assets/La_voliere_gourmande.png"
+              alt="la La_voliere_gourmande"
+            />
+            <div class="div8">
+              <h3>La Volière Gourmande</h3>
+              <p>
+                Un lieu où chaque plat est une envolée de saveurs, inspirée par
+                nos amis à plumes.
+              </p>
+              <p>Spécialité:</p>
+              <p>Poulet Rôti à l’ herbe de Provence:</p>
+              <p>
+                Un poulet parfaitement rôti, tendre et parfumé, accompagné d'un
+                mélange d'herbes fraîches et d'une sauce maison.Un lieu où
+                chaque plat est une envolée de saveurs, inspirée par nos amis à
+                plumes.
+              </p>
+              <a href="./la voliere gourmande.html">
+                <button>En savoir plus</button>
+              </a>
             </div>
+          </article>
+        </div>
 
-            <div class="div4">
-                <article class="coq">
-                    <img class="img_restaurant2" src="/assets/Le_Coq_et_la_table.png"
-                        alt="vue du restaurant le coq & la table">
-                    <div class="div2">
-                        <h3>Le Coq & la Table</h3>
-                        <a href="./le coq & la table.html">
-                            <button>En savoir plus</button>
-                        </a>
-                        <p>Ici, les poules servent un festin royal sous l’œil attentif du fier coq.</p>
-                        <p> Spécialité:</p>
-                        <p>Coq au Vin:</p>
-                        <p>mijoté lentement dans un vin rouge savoureux, accompagné de
-                            champignons, de
-                            lardons et d'une purée maison onctueuse.Ici, les poules servent un festin royal sous
-                            l’œil
-                            attentif du fier coq.</p>
-                    </div>
-                </article>
-
-                <article class="poules">
-                    <img class="img_restaurant2" src="/assets/Les_Poules_en_fete.png"
-                        alt="vue du restaurant: les poules en fete">
-                    <div class="div5">
-                        <h3>Les Poules en Fete</h3>
-                        <a href="./les poules en fete.html">
-                            <button>En savoir plus</button>
-                        </a>
-                        <p>Un restaurant où l’ambiance est festive et les poules chantent pour un repas savoureux.</p>
-                        <p> Spécialité:</p>
-                        <p>Soupe de Poulet aux Légumes du Marché</p>
-                        <p>Une soupe réconfortante à base de poulet fermier, de légumes de saison et d'herbes fraîches,
-                            idéale pour un repas convivial.</p>
-                    </div>
-                </article>
-
-                <article class="volière">
-                    <img class="img_restaurant2" src="/assets/La_voliere_gourmande.png"
-                        alt="vue du restaurant: la La_voliere_gourmande">
-                    <div class="div5">
-                        <h3>La Volière Gourmande</h3>
-                        <a href="./la voliere gourmande.html">
-                            <button>En savoir plus</button>
-                        </a>
-                        <p>Un lieu où chaque plat est une envolée de saveurs, inspirée par nos amis à plumes.</p>
-                        <p> Spécialité:</p>
-                        <p>Poulet Rôti à l’ herbe de Provence</p>
-                        <p>Un poulet parfaitement rôti, tendre et parfumé,
-                            accompagné d'un mélange d'herbes fraîches et d'une sauce maison.</p>
-                    </div>
-                </article>
+        <div class="div4">
+          <article class="coq">
+            <img
+              class="img_restaurant2"
+              src="/assets/Le_Coq_et_la_table.png"
+              alt="vue du restaurant le coq & la table"
+            />
+            <div class="div2">
+              <h3>Le Coq & la Table</h3>
+              <a href="./le coq & la table.html">
+                <button>En savoir plus</button>
+              </a>
+              <p>
+                Ici, les poules servent un festin royal sous l’œil attentif du
+                fier coq.
+              </p>
+              <p>Spécialité:</p>
+              <p>Coq au Vin:</p>
+              <p>
+                mijoté lentement dans un vin rouge savoureux, accompagné de
+                champignons, de lardons et d'une purée maison onctueuse.Ici, les
+                poules servent un festin royal sous l’œil attentif du fier coq.
+              </p>
             </div>
-        </section>
+          </article>
 
-        <h2> Bars:</h2>
-        <section class="bars">
-            <div class="div6">
-                <article class="mise_en_avant2">
-                    <img class="img_bar" src="/assets/le perchoir du coq.png" alt="vue du bar: le perchoir du coq">
-                    <div class="div1">
-                        <h3>Le Perchoir du Coq</h3>
-                        <p>Un bar perché où l’on savoure des cocktails avec vue sur la ville et une ambiance animée.
-                        </p>
-                        <p> Spécialité:</p>
-                        <p>Coup de Sanguine:</p>
-                        <p>Un cocktail audacieux à base de rhum, d’orange sanguine et de sirop de gingembre, servi
-                            dans un verre original.</p>
-                        <a href="./perchoir du coq.html">
-                            <button>En savoir plus</button>
-                        </a>
-                    </div>
-                </article>
+          <article class="poules">
+            <img
+              class="img_restaurant2"
+              src="/assets/Les_Poules_en_fete.png"
+              alt="vue du restaurant: les poules en fete"
+            />
+            <div class="div5">
+              <h3>Les Poules en Fete</h3>
+              <a href="./les poules en fete.html">
+                <button>En savoir plus</button>
+              </a>
+              <p>
+                Un restaurant où l’ambiance est festive et les poules chantent
+                pour un repas savoureux.
+              </p>
+              <p>Spécialité:</p>
+              <p>Soupe de Poulet aux Légumes du Marché</p>
+              <p>
+                Une soupe réconfortante à base de poulet fermier, de légumes de
+                saison et d'herbes fraîches, idéale pour un repas convivial.
+              </p>
             </div>
+          </article>
 
-            <div class="div4">
-                <article class="roti">
-                    <img class="img_bar2" src="/assets/oeuf roti bar.png" alt="vue du bar l'oeuf roti">
-                    <div class="div2">
-                        <h3>L'Œuf Roti Bar</h3>
-                        <a href="./l'oeuf roti bar.html">
-                            <button>En savoir plus</button>
-                        </a>
-                        <p>Le lieu idéal pour déguster des cocktails uniques dans une ambiance décontractée et
-                            conviviale.
-                        </p>
-                        <p> Spécialité:</p>
-                        <p>Citrus Velvet</p>
-                        <p>Un cocktail à base de whisky, blanc d'œuf et citron, crémeux et légèrement acidulé pour
-                            une dégustation unique.</p>
-                    </div>
-                </article>
-
-                <article class="caille">
-                    <img class="img_bar2" src="/assets/la caille et le barman.png"
-                        alt="vue du bar la Caille & le Barman">
-                    <div class="div3">
-                        <h3>La Caille & le Barman</h3>
-                        <a href="./caille&barman.html">
-                            <button>En savoir plus</button>
-                        </a>
-                        <p>Ici, les soirées sont chaleureuses, les conversations rient comme des cailles et les
-                            verres
-                            s'entrechoquent.</p>
-                        <p>Spécialité:</p>
-                        <p>Berry Twist</p>
-                        <p>Un gin tonic revisité avec une touche de liqueur de baies et de zestes d’agrumes, pour
-                            une touche fraîche.</p>
-                    </div>
-                </article>
-                <article class="perchoir">
-                    <img class="img_bar2" src="/assets/le perchoir du coq.png" alt="vue du bar: le perchoir du coq">
-                    <div class="div5">
-                        <h3>Le Perchoir du Coq</h3>
-                        <a href="./perchoir du coq.html">
-                            <button>En savoir plus</button>
-                        </a>
-                        <p>Un bar perché où l’on savoure des cocktails avec vue sur la ville et une ambiance animée.
-                        </p>
-                        <p> Spécialité:</p>
-                        <p>Coup de Sanguine</p>
-                        <p>Un cocktail audacieux à base de rhum, d’orange sanguine et de sirop de gingembre, servi dans
-                            un verre original.</p>
-                    </div>
-                </article>
+          <article class="volière">
+            <img
+              class="img_restaurant2"
+              src="/assets/La_voliere_gourmande.png"
+              alt="vue du restaurant: la La_voliere_gourmande"
+            />
+            <div class="div5">
+              <h3>La Volière Gourmande</h3>
+              <a href="./la voliere gourmande.html">
+                <button>En savoir plus</button>
+              </a>
+              <p>
+                Un lieu où chaque plat est une envolée de saveurs, inspirée par
+                nos amis à plumes.
+              </p>
+              <p>Spécialité:</p>
+              <p>Poulet Rôti à l’ herbe de Provence</p>
+              <p>
+                Un poulet parfaitement rôti, tendre et parfumé, accompagné d'un
+                mélange d'herbes fraîches et d'une sauce maison.
+              </p>
             </div>
+          </article>
+        </div>
+      </section>
 
-        </section>
-        <script src="gastronomie.js" defer></script>
+      <h2>Bars:</h2>
+      <section class="bars">
+        <div class="div6">
+          <article class="mise_en_avant2">
+            <img
+              class="img_bar"
+              src="/assets/le perchoir du coq.png"
+              alt="vue du bar: le perchoir du coq"
+            />
+            <div class="div1">
+              <h3>Le Perchoir du Coq</h3>
+              <p>
+                Un bar perché où l’on savoure des cocktails avec vue sur la
+                ville et une ambiance animée.
+              </p>
+              <p>Spécialité:</p>
+              <p>Coup de Sanguine:</p>
+              <p>
+                Un cocktail audacieux à base de rhum, d’orange sanguine et de
+                sirop de gingembre, servi dans un verre original.
+              </p>
+              <a href="./perchoir du coq.html">
+                <button>En savoir plus</button>
+              </a>
+            </div>
+          </article>
+        </div>
+
+        <div class="div4">
+          <article class="roti">
+            <img
+              class="img_bar2"
+              src="/assets/oeuf roti bar.png"
+              alt="vue du bar l'oeuf roti"
+            />
+            <div class="div2">
+              <h3>L'Œuf Roti Bar</h3>
+              <a href="./l'oeuf roti bar.html">
+                <button>En savoir plus</button>
+              </a>
+              <p>
+                Le lieu idéal pour déguster des cocktails uniques dans une
+                ambiance décontractée et conviviale.
+              </p>
+              <p>Spécialité:</p>
+              <p>Citrus Velvet</p>
+              <p>
+                Un cocktail à base de whisky, blanc d'œuf et citron, crémeux et
+                légèrement acidulé pour une dégustation unique.
+              </p>
+            </div>
+          </article>
+
+          <article class="caille">
+            <img
+              class="img_bar2"
+              src="/assets/la caille et le barman.png"
+              alt="vue du bar la Caille & le Barman"
+            />
+            <div class="div3">
+              <h3>La Caille & le Barman</h3>
+              <a href="./caille&barman.html">
+                <button>En savoir plus</button>
+              </a>
+              <p>
+                Ici, les soirées sont chaleureuses, les conversations rient
+                comme des cailles et les verres s'entrechoquent.
+              </p>
+              <p>Spécialité:</p>
+              <p>Berry Twist</p>
+              <p>
+                Un gin tonic revisité avec une touche de liqueur de baies et de
+                zestes d’agrumes, pour une touche fraîche.
+              </p>
+            </div>
+          </article>
+          <article class="perchoir">
+            <img
+              class="img_bar2"
+              src="/assets/le perchoir du coq.png"
+              alt="vue du bar: le perchoir du coq"
+            />
+            <div class="div5">
+              <h3>Le Perchoir du Coq</h3>
+              <a href="./perchoir du coq.html">
+                <button>En savoir plus</button>
+              </a>
+              <p>
+                Un bar perché où l’on savoure des cocktails avec vue sur la
+                ville et une ambiance animée.
+              </p>
+              <p>Spécialité:</p>
+              <p>Coup de Sanguine</p>
+              <p>
+                Un cocktail audacieux à base de rhum, d’orange sanguine et de
+                sirop de gingembre, servi dans un verre original.
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
+      <script src="gastronomie.js" defer></script>
     </main>
     <footer>
-        <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
+      <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
 
-        <p>&copy; 2024 Wild City. Tous droits réservés.
-            <a href="#">Mentions légales</a> | <a href="#">CGU</a>
-        </p>
-
+      <p>
+        &copy; 2024 Wild City. Tous droits réservés.
+        <a href="#">Mentions légales</a> | <a href="#">CGU</a>
+      </p>
     </footer>
-</body>
-
+  </body>
 </html>
