--- a/loisir.html
+++ b/loisir.html
@@ -1,201 +1,231 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Loisirs</title>
-    <link rel="stylesheet" href="loisir.css">
-</head>
+    <link rel="stylesheet" href="loisir.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="test"></div>
-        <nav>
-            <p><a href="index.html"></a></p>
-            <ul>
-                <li><a href="index.html" class="default">🏠</a></li>
-                <li><a href="gastronomie/gastronomie.html">Gastronomie</a></li>
-                <li><a href="loisir.html">Loisirs</a></li>
-                <li><a href="cultures.html">Cultures</a></li>
-                <li><a href="news.html">News</a></li>
-                <!-- <li><a href="" class="search-icon-i">🏠</a></li> -->
-            </ul>
-            <div class="search-container">
-                <input type="search" class="search-bar" placeholder="Rechercher..." />
-                <span class="search-icon">&#128269;</span>
-            </div>
-        </nav>
+      <div class="test"></div>
+      <nav>
+        <p><a href="index.html"></a></p>
+        <ul>
+          <li><a href="index.html" class="default">🏠</a></li>
+          <li><a href="gastronomie/gastronomie.html">Gastronomie</a></li>
+          <li><a href="loisir.html">Loisirs</a></li>
+          <li><a href="cultures.html">Cultures</a></li>
+          <li><a href="news.html">News</a></li>
+          <!-- <li><a href="" class="search-icon-i">🏠</a></li> -->
+        </ul>
+        <div class="search-container">
+          <input type="search" class="search-bar" placeholder="Rechercher..." />
+          <span class="search-icon">&#128269;</span>
+        </div>
+      </nav>
     </header>
     <h1>Loisirs</h1>
 
     <!--Article mis en avant 1 -->
     <h2 class="h2sportetFS">Sports</h2>
     <div class="featured-article">
-        <article id="featured-article">
-            <img id="featured-image" src="./assets/chicken ball.jpg" alt="Image de l'article">
-            <div>
-                <h2>Chicken Ball à Wild City</h2>
-                <p>Il y a longtemps, dans la ville sauvage de Wild City, un poulet audacieux nommé Pluméco rêvait de
-                    créer
-                    un
-                    sport qui refléterait l'esprit aventureux et dynamique des habitants. Après avoir observé ses amis
-                    jouer
-                    à
-                    un jeu de lancer, Pluméco eut une idée : utiliser une balle en forme de poulet pour un sport qui
-                    mêlerait
-                    sauts, courses et acrobaties. Il appela ce jeu le Chicken Ball.
-
-                    Rapidement, ce sport devint un phénomène à Wild City, rassemblant les poulets dans des compétitions
-                    effervescentes où agilité et stratégie étaient clés. Aujourd'hui, le Chicken Ball est devenu le
-                    sport
-                    emblématique de la ville, pratiqué par tous, jeunes et vieux, dans les rues et arènes locales,
-                    célébrant
-                    l'esprit libre et sauvage de Wild City.
-                </p>
-                <button class="B2">En savoir +</button>
-
-            </div>
-
-        </article>
+      <article id="featured-article">
+        <img
+          id="featured-image"
+          src="./assets/chicken ball.jpg"
+          alt="Image de l'article"
+        />
+        <div>
+          <h2>Chicken Ball à Wild City</h2>
+          <p>
+            Il y a longtemps, dans la ville sauvage de Wild City, un poulet
+            audacieux nommé Pluméco rêvait de créer un sport qui refléterait
+            l'esprit aventureux et dynamique des habitants. Après avoir observé
+            ses amis jouer à un jeu de lancer, Pluméco eut une idée : utiliser
+            une balle en forme de poulet pour un sport qui mêlerait sauts,
+            courses et acrobaties. Il appela ce jeu le Chicken Ball. Rapidement,
+            ce sport devint un phénomène à Wild City, rassemblant les poulets
+            dans des compétitions effervescentes où agilité et stratégie étaient
+            clés. Aujourd'hui, le Chicken Ball est devenu le sport emblématique
+            de la ville, pratiqué par tous, jeunes et vieux, dans les rues et
+            arènes locales, célébrant l'esprit libre et sauvage de Wild City.
+          </p>
+          <button class="B2">En savoir +</button>
+        </div>
+      </article>
     </div>
 
     <!-- Section 2 : Carrousel des autres articles -->
     <div class="carrousel-container">
-        <div class="test1"><button class="prev" aria-label="Précédent">&lt;</button></div>
+      <div class="test1">
+        <button class="prev" aria-label="Précédent">&lt;</button>
+      </div>
 
-        <!-- Carrousel -->
-        <div class="carrousel">
-            <div class="carrousel-item" data-article="1">
-                <article>
-                    <div class="jsp">
-                        <img src="./assets/chickenswing.jpg" alt="Image de l'Article 1">
-                    </div>
-                    <h2>CHICKEN SWING</h2>
-                    <span>En savoir +</span>
-                    <p>Le chicken swing est le sport le plus populaire. Ce jeu se
-                        pratique sur des balançoires géantes où deux équipes de poules s'affrontent. Le but est de
-                        marquer des points en lançant un volant de plumes dans le camp adverse tout en se balançant à
-                        grande vitesse. Le tournoi de chicken swing est un événement majeur : les rues s’animent de
-                        chants et de danses, et chaque victoire est célébrée par une grande parade. Ce sport,
-                        symbolisant l'agilité et la coopération, est au cœur de la vie à Wildcity.
-                    </p>
-                </article>
+      <!-- Carrousel -->
+      <div class="carrousel">
+        <div class="carrousel-item" data-article="1">
+          <article>
+            <div class="jsp">
+              <img src="./assets/chickenswing.jpg" alt="Image de l'Article 1" />
             </div>
-            <div class="carrousel-item" data-article="2">
-                <article>
-
-                    <img src="./assets/poulepong.jpg" alt="Image de l'Article 2">
-                    <h2>POULE PONG</h2>
-                    <span>En savoir +</span>
-                    <p>Le poule pong est le sport roi. Chaque année, des équipes de
-                        poules s’affrontent sur un terrain circulaire, cherchant à marquer des points en envoyant un
-                        volant de plumes dans le camp adverse. Ce tournoi est un événement majeur : les rues s’animent
-                        de chants et de danses, et après chaque victoire, une grande parade célèbre les champions. Le
-                        poule pong, symbole de compétition et de solidarité, est au cœur de la vie à Wildcity.</p>
-                </article>
-            </div>
-            <div class="carrousel-item" data-article="3">
-                <article>
-
-                    <img src="./assets/chicken ball.jpg" alt="Image de l'Article 2">
-                    <h2>Chicken Ball </h2>
-                    <span>E, savoir +</span>
-                    <p>Il y a longtemps, dans la ville sauvage de Wild City, un poulet audacieux nommé Pluméco rêvait de
-                        créer un sport qui refléterait l'esprit aventureux et dynamique des habitants. Après avoir
-                        observé ses amis jouer à un jeu de lancer, Pluméco eut une idée : utiliser une balle en forme de
-                        poulet pour un sport qui mêlerait sauts, courses et acrobaties. Il appela ce jeu le Chicken
-                        Ball.</p>
-                </article>
-            </div>
+            <h2>CHICKEN SWING</h2>
+            <span>En savoir +</span>
+            <p>
+              Le chicken swing est le sport le plus populaire. Ce jeu se
+              pratique sur des balançoires géantes où deux équipes de poules
+              s'affrontent. Le but est de marquer des points en lançant un
+              volant de plumes dans le camp adverse tout en se balançant à
+              grande vitesse. Le tournoi de chicken swing est un événement
+              majeur : les rues s’animent de chants et de danses, et chaque
+              victoire est célébrée par une grande parade. Ce sport, symbolisant
+              l'agilité et la coopération, est au cœur de la vie à Wildcity.
+            </p>
+          </article>
         </div>
+        <div class="carrousel-item" data-article="2">
+          <article>
+            <img src="./assets/poulepong.jpg" alt="Image de l'Article 2" />
+            <h2>POULE PONG</h2>
+            <span>En savoir +</span>
+            <p>
+              Le poule pong est le sport roi. Chaque année, des équipes de
+              poules s’affrontent sur un terrain circulaire, cherchant à marquer
+              des points en envoyant un volant de plumes dans le camp adverse.
+              Ce tournoi est un événement majeur : les rues s’animent de chants
+              et de danses, et après chaque victoire, une grande parade célèbre
+              les champions. Le poule pong, symbole de compétition et de
+              solidarité, est au cœur de la vie à Wildcity.
+            </p>
+          </article>
+        </div>
+        <div class="carrousel-item" data-article="3">
+          <article>
+            <img src="./assets/chicken ball.jpg" alt="Image de l'Article 2" />
+            <h2>Chicken Ball</h2>
+            <span>E, savoir +</span>
+            <p>
+              Il y a longtemps, dans la ville sauvage de Wild City, un poulet
+              audacieux nommé Pluméco rêvait de créer un sport qui refléterait
+              l'esprit aventureux et dynamique des habitants. Après avoir
+              observé ses amis jouer à un jeu de lancer, Pluméco eut une idée :
+              utiliser une balle en forme de poulet pour un sport qui mêlerait
+              sauts, courses et acrobaties. Il appela ce jeu le Chicken Ball.
+            </p>
+          </article>
+        </div>
+      </div>
 
-        <div class="test2"><button class="next" aria-label="Suivant">&gt;</button></div>
+      <div class="test2">
+        <button class="next" aria-label="Suivant">&gt;</button>
+      </div>
     </div>
     <!-- Deuxieme partie du site -->
     <h2 class="h2sportetFS">Foires et Salons</h2>
     <div class="featured-article">
-        <article id="featured-article">
-            <img id="featured-image" src="./assets/Salon de l'humain.jpg" alt="Image de l'article">
-            <div>
-                <h2>Salon de l'Humain</h2>
-                <p>Cette métropole dynamique et innovante où les poules ont pris les rênes de la gouvernance,
-                    poursuit son objectif de fusionner nature, technologie et culture. Au cœur de cette ville à
-                    l'atmosphère unique, un événement majeur attire l'attention des citoyens et visiteurs : le Salon de
-                    l'Humain. Organisé chaque année par la municipalité de WildCity, dirigée par la charismatique poule
-                    Cluckus Maximus, cet événement est l'occasion pour la ville de se recentrer sur l’humain, ses
-                    besoins, ses défis et ses aspirations dans un monde en constante évolution.
-                </p>
-                <button class="B2">En savoir +</button>
-
-            </div>
-
-        </article>
+      <article id="featured-article">
+        <img
+          id="featured-image"
+          src="./assets/Salon de l'humain.jpg"
+          alt="Image de l'article"
+        />
+        <div>
+          <h2>Salon de l'Humain</h2>
+          <p>
+            Cette métropole dynamique et innovante où les poules ont pris les
+            rênes de la gouvernance, poursuit son objectif de fusionner nature,
+            technologie et culture. Au cœur de cette ville à l'atmosphère
+            unique, un événement majeur attire l'attention des citoyens et
+            visiteurs : le Salon de l'Humain. Organisé chaque année par la
+            municipalité de WildCity, dirigée par la charismatique poule Cluckus
+            Maximus, cet événement est l'occasion pour la ville de se recentrer
+            sur l’humain, ses besoins, ses défis et ses aspirations dans un
+            monde en constante évolution.
+          </p>
+          <button class="B2">En savoir +</button>
+        </div>
+      </article>
     </div>
 
     <!-- Section 2 : Carrousel des autres articles -->
     <div class="carrousel-container">
-        <div class="test1"><button class="prev" aria-label="Précédent">&lt;</button></div>
+      <div class="test1">
+        <button class="prev" aria-label="Précédent">&lt;</button>
+      </div>
 
-        <!-- Carrousel -->
-        <div class="carrousel">
-            <div class="carrousel-item" data-article="4">
-                <article>
-
-                    <img src="assets/Fete graine d'avenir.jpg" alt="Image de l'Article 4">
-                    <h2>La Fête des Graines d'Avenir</h2>
-                    <span>En savoir +</span>
-                    <p>Un événement axé sur l'agriculture durable, la nature, et les pratiques respectueuses de
-                        l'environnement. Les citoyens de WildCity, dirigés par leurs poules gouvernantes, organisent
-                        cette foire pour promouvoir les initiatives écologiques, l'agriculture urbaine, ainsi que les
-                        produits locaux et bio. C'est aussi un lieu où les habitants peuvent échanger sur les solutions
-                        futures pour un monde plus vert et plus équitable.
-                    </p>
-                </article>
-            </div>
-            <div class="carrousel-item" data-article="5">
-                <article>
-
-                    <img src="assets/Les jardins.jpg" alt="Image de l'Article 5">
-                    <h2>Les Jardins</h2>
-                    <span>En savoir +</span>
-                    <p>Un événement qui se concentre sur le futur de l'urbanisme, du développement durable et de
-                        l'architecture verte. À WildCity, cet événement invite les citoyens et les visiteurs à imaginer
-                        et construire ensemble la ville de demain, tout en mettant l'accent sur l'intégration de la
-                        nature dans le quotidien urbain. Des jardins communautaires, des espaces verts et des projets
-                        écologiques innovants seront au centre de cette foire, où l'on pourra aussi participer à des
-                        ateliers de jardinage urbain, de permaculture, ou de design d'espaces verts.</p>
-                </article>
-            </div>
-            <div class="carrousel-item" data-article="6">
-                <article>
-
-                    <img src="assets/Salon de l'humain.jpg" alt="Image de l'Article 6">
-                    <h2>Salon de l'Humain</h2>
-                    <span>En savoir +</span>
-                    <p>Cette métropole dynamique et innovante où les poules ont pris les rênes de la gouvernance,
-                        poursuit son objectif de fusionner nature, technologie et culture. Au cœur de cette ville à
-                        l'atmosphère unique, un événement majeur attire l'attention des citoyens et visiteurs : le Salon
-                        de
-                        l'Humain. Organisé chaque année par la municipalité de WildCity, dirigée par la charismatique
-                        poule
-                        Cluckus Maximus, cet événement est l'occasion pour la ville de se recentrer sur l’humain, ses
-                        besoins, ses défis et ses aspirations dans un monde en constante évolution.</p>
-                </article>
-            </div>
+      <!-- Carrousel -->
+      <div class="carrousel">
+        <div class="carrousel-item" data-article="4">
+          <article>
+            <img
+              src="assets/Fete graine d'avenir.jpg"
+              alt="Image de l'Article 4"
+            />
+            <h2>La Fête des Graines d'Avenir</h2>
+            <span>En savoir +</span>
+            <p>
+              Un événement axé sur l'agriculture durable, la nature, et les
+              pratiques respectueuses de l'environnement. Les citoyens de
+              WildCity, dirigés par leurs poules gouvernantes, organisent cette
+              foire pour promouvoir les initiatives écologiques, l'agriculture
+              urbaine, ainsi que les produits locaux et bio. C'est aussi un lieu
+              où les habitants peuvent échanger sur les solutions futures pour
+              un monde plus vert et plus équitable.
+            </p>
+          </article>
         </div>
+        <div class="carrousel-item" data-article="5">
+          <article>
+            <img src="assets/Les jardins.jpg" alt="Image de l'Article 5" />
+            <h2>Les Jardins</h2>
+            <span>En savoir +</span>
+            <p>
+              Un événement qui se concentre sur le futur de l'urbanisme, du
+              développement durable et de l'architecture verte. À WildCity, cet
+              événement invite les citoyens et les visiteurs à imaginer et
+              construire ensemble la ville de demain, tout en mettant l'accent
+              sur l'intégration de la nature dans le quotidien urbain. Des
+              jardins communautaires, des espaces verts et des projets
+              écologiques innovants seront au centre de cette foire, où l'on
+              pourra aussi participer à des ateliers de jardinage urbain, de
+              permaculture, ou de design d'espaces verts.
+            </p>
+          </article>
+        </div>
+        <div class="carrousel-item" data-article="6">
+          <article>
+            <img
+              src="assets/Salon de l'humain.jpg"
+              alt="Image de l'Article 6"
+            />
+            <h2>Salon de l'Humain</h2>
+            <span>En savoir +</span>
+            <p>
+              Cette métropole dynamique et innovante où les poules ont pris les
+              rênes de la gouvernance, poursuit son objectif de fusionner
+              nature, technologie et culture. Au cœur de cette ville à
+              l'atmosphère unique, un événement majeur attire l'attention des
+              citoyens et visiteurs : le Salon de l'Humain. Organisé chaque
+              année par la municipalité de WildCity, dirigée par la
+              charismatique poule Cluckus Maximus, cet événement est l'occasion
+              pour la ville de se recentrer sur l’humain, ses besoins, ses défis
+              et ses aspirations dans un monde en constante évolution.
+            </p>
+          </article>
+        </div>
+      </div>
 
-        <div class="test2"><button class="next" aria-label="Suivant">&gt;</button></div>
+      <div class="test2">
+        <button class="next" aria-label="Suivant">&gt;</button>
+      </div>
     </div>
 
     <footer>
-        <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
-        <p>&copy; 2024 Wild City. Tous droits réservés.
-        </p>
+      <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
+      <p>&copy; 2024 Wild City. Tous droits réservés.</p>
     </footer>
 
     <script src="loisir.js"></script>
-
-</body>
-
+  </body>
 </html>
