--- a/news.html
+++ b/news.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="./index.html" class="default">🏠</a></li>
                     <li><a href="Gastronomie.html">Gastronomie</a></li>
-                    <li><a href="Loisirs.html">Loisirs</a></li>
+                    <li><a href="loisir.html">Loisirs</a></li>
                     <li><a href="./cultures.html">Cultures</a></li>
                     <li><a href="./news.html">News</a></li>
                     <!-- <li><a href="" class="search-icon-i">🏠</a></li> -->
