--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
                 <p><a href="index.html"></a></p>
                 <ul>
                     <li><a href="./index.html" class="default">🏠</a></li>
-                    <li><a href="Gastronomie.html">Gastronomie</a></li>
+                    <li><a href="gastronomie/gastronomie.html">Gastronomie</a></li>
                     <li><a href="loisir.html">Loisirs</a></li>
                     <li><a href="./cultures.html">Cultures</a></li>
                     <li><a href="./news.html">News</a></li>
